Wed Oct 31 10:43:25 2007  Jiri (George) Lebl <jirka@5z.com>

	* gtkextra/*: remove gtkplotdtriangle.[ch]: they're not needed and
	  have a bad license.

Fri Oct 26 02:16:23 2007  Jiri (George) Lebl <jirka@5z.com>

	* src/calc.[ch], src/eval.[ch], src/genius.c, src/gnome-genius.c:
	  Implement maximum node checking.  If the limit is hit you are
	  given a chance to interrupt the current program.  Only in the
	  GNOME version.  Add this to the Properties dialog.

	* src/dict.c: Fix large performance problem on returning from a deep
	  recursion by not doing a stupid assert

	* help/C/genius.xml: document max_nodes

Thu Oct 25 15:22:16 2007  Jiri (George) Lebl <jirka@5z.com>

	* src/inter.c: fix command line editting.  readline docs are
	  horrible! (and readline is horrible)

	* src/gnome-genius.c: fix strange printing of locals among globals

Thu Oct 25 13:47:40 2007  Jiri (George) Lebl <jirka@5z.com>

	* src/gnome-genius.c, src/dict.[ch]: Implement showing of all user
	  variables even during runtime.  Shows even local variables if some
	  function is currently being executed.  Allows better debugging

	* src/gnome-genius.c: fix show full answer leak and fix running it
	  during runtime.

	* configure.in: bump version

	* help/C/genius.xml: update docs a bit, add some more info on the gui
	  part of genius.

Tue Oct 23 17:14:25 2007  Jiri (George) Lebl <jirka@5z.com>

	* src/funclib.c: positive and nonnegative matrixes obviously can't
	  have complex entries so return false

Tue Oct 23 16:23:53 2007  Jiri (George) Lebl <jirka@5z.com>

	* src/funclib.c: add IsMatrixPositive and IsMatrixNonnegative

	* help/C/gel-function-list.xml: add docs for the above

Tue Oct 23 16:04:56 2007  Jiri (George) Lebl <jirka@5z.com>

	* src/funclib.c: add "version" function for checking the version

	* help/C/gel-function-list.xml: add doc for version

Tue Oct 23 15:42:03 2007  Jiri (George) Lebl <jirka@5z.com>

	* src/funclib.c, src/funclibhelper.cP: Add IsZero and IsIdentity for