@@ -1,3 +1,14 @@
+2007-11-03  Sebastian Dröge  <slomo@circular-chaos.org>
+
+	* Makefile.am:
+	* configure.in:
+	* help/omf.make:
+	Add --disable-scrollkeeper and --disable-update-mimedb options to
+	configure to skip building the scrollkeeper and mime database on
+	make install. The files generated by this must not be shipped by
+	binary packages and having this options makes it easier to package
+	genius.
+
 Wed Oct 31 10:43:25 2007  Jiri (George) Lebl <jirka@5z.com>
 
 	* gtkextra/*: remove gtkplotdtriangle.[ch]: they're not needed and
